new file:   Sqlite3/Makefile 	new file:   Sqlite3/include/Makefile 	new file:   Sqlite3/include/sqlite3.h 	new file:   Sqlite3/include/sqlite3ext.h

--- a/Project/Makefile
+++ b/Project/Makefile
@@ -1,5 +1,10 @@
 #…Ë÷√±‡“Î∆˜
 CC=arm-none-linux-gnueabi-g++
+
+INCLUDE  = -I Common -I Log -I Adns -I Sqlite3/include
+LIBVAR   = -lsqlite3  -lpthread -lm -ldl
+LIBPATH  = -L Sqlite3/lib
+
 SUBDIRS=$(shell ls -l | grep ^d | awk '{if($$9 != "debug") print $$9}')
 ROOT_DIR=$(shell pwd)
 BIN=myapp
@@ -16,7 +21,7 @@ DEBUG:ECHO
 ECHO:
 	@echo $(SUBDIRS)
 $(CUR_OBJS):%.o:%.cpp
-	$(CC) -c $^ -o $(ROOT_DIR)/$(OBJS_DIR)/$@ -I Common -I Log -I Adns
+	$(CC) -c $^ -o $(ROOT_DIR)/$(OBJS_DIR)/$@  $(INCLUDE) $(LIBVAR) $(LIBPATH)
 CLEAN:
 	@rm $(OBJS_DIR)/*.o
 	@rm -rf $(BIN_DIR)/*
