--- a/Project/debug/Makefile
+++ b/Project/debug/Makefile
@@ -1,4 +1,4 @@
 OBJS=*.o
 ODIR=obj
 $(ROOT_DIR)/$(BIN_DIR)/$(BIN):$(ODIR)/$(OBJS)
-	$(CC) -o $@ $^
+	$(CC) -o $@ $^   -I $(ROOT_DIR)/Sqlite3/include -L $(ROOT_DIR)/Sqlite3/lib -lsqlite3  -lpthread -lm -ldl
